@@ -5,7 +5,7 @@ CFLAGS=-ffreestanding -fshort-wchar -mno-red-zone
 LDFLAGS=-ffreestanding -nostdlib
 all: $(EXEC) test
 
-.PHONY: kernel test libc
+.PHONY: kernel test libc initfs
 
 $(EXEC): kernel initfs
 	make -C loader
@@ -14,7 +14,7 @@ libc:
 kernel: libc
 	QEMU_DEBUG=1 make -C kernel
 initfs: font
-	echo font | cpio -o > initfs
+	cpio -o < initfs_list > initfs
 font:
 	clang gen_font.c
 	./a.out
@@ -22,7 +22,7 @@ font:
 test:
 	make -C test
 clean: 
-	rm -f fat.img $(EXEC) $(wildcard *.o) initfs
+	rm -f fat.img $(EXEC) $(wildcard *.o)
 	make -C loader clean
 	make -C kernel clean
 	make -C test clean
