@@ -1,6 +1,7 @@
 #ifndef __COMMON_BOOTINFO_H__
 #define __COMMON_BOOTINFO_H__
 #include <stdint.h>
+#include "kernel/include/cpio.h"
 typedef struct
 {
   uint32_t type;
@@ -26,21 +27,6 @@ typedef struct
   uint32_t rsdt_address;
   uint64_t xsdt_address;
 } kernel_bootinfo_t;
-
-typedef struct
-{
-  uint16_t c_magic;
-  uint16_t c_dev;
-  uint16_t c_ino;
-  uint16_t c_mode;
-  uint16_t c_uid;
-  uint16_t c_gid;
-  uint16_t c_nlink;
-  uint16_t c_rdev;
-  uint16_t c_mtime[2];
-  uint16_t c_namesize;
-  uint16_t c_filesize[2];
-} cpio_header_t;
 
 typedef struct
 {
