@@ -10,4 +10,5 @@ void* memcpy(void* __restrict, const void* __restrict, size_t);
 void* memmove(void*, void*, size_t);
 void* memset(void*, int, size_t);
 size_t strlen(const char*);
+int strncmp(const char* s1, const char* s2, size_t n);
 #endif
