@@ -49,6 +49,26 @@ size_t strlen(const char* str)
   return len;
 }
 
+int strncmp(const char* s1, const char* s2, size_t n)
+{
+  for (size_t i = 0; i < n; i++)
+  {
+    if (s1[i] == 0 || s2[i] == 0)
+    {
+      break;
+    }
+    if (s1[i] < s2[i])
+    {
+      return -1;
+    }
+    else if (s1[i] > s2[i])
+    {
+      return 1;
+    }
+  }
+  return 0;
+}
+
 void* memset(void* mem, int val, size_t size)
 {
   unsigned char* buf = (unsigned char*)mem;
